--- a/resources/assets/scss/modules/woocommerce-checkout.scss
+++ b/resources/assets/scss/modules/woocommerce-checkout.scss
@@ -271,3 +271,7 @@ form.woocommerce-checkout {
 		color: theme-color("success");
 	}
 }
+
+.place-order {
+	margin-top: $spacer;
+}
